MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -1,6 +1,9 @@
 # 4주차 업무일지
 
-## 19일 월요
+## 19일 월요일
+
+* 용석님 운전자 납면 저해지 확인
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNTYzMzQwMDBdfQ==
+eyJoaXN0b3J5IjpbMTY5ODgwNDc4Ml19
 -->
