--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -3,7 +3,8 @@
 ## 19일 월요일
 
 * 용석님 운전자 납면 저해지 확인
+*  무해지상품 분석 마무리단계
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY5ODgwNDc4Ml19
+eyJoaXN0b3J5IjpbLTEzNzE3NjQ0MDAsMTY5ODgwNDc4Ml19
 -->
