--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -4,8 +4,8 @@
 
 * 용석님 운전자 납면 저해지 확인
 *  무해지상품 분석 마무리단계
-[]
+ - [ ] safas   
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI3NTIyOTAyMCwtMTM3MTc2NDQwMCwxNj
-k4ODA0NzgyXX0=
+eyJoaXN0b3J5IjpbLTExNDU3OTEzMzEsLTEzNzE3NjQ0MDAsMT
+Y5ODgwNDc4Ml19
 -->
