MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -2,10 +2,14 @@
 
 ## 19일 월요일
 
-* 용석님 운전자 납면 저해지 확인
-*  무해지상품 분석 마무리단계
- - [ ] 확인 진행   
+*  용석님 운전자 납면 저해지 확인
+*  무해지상품 분석 마무리단계 >> 누적으로 분석 완료
+*  
+
+## 20일 화요일
+
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA0NDk5Mjg1LC0xMzcxNzY0NDAwLDE2OT
-g4MDQ3ODJdfQ==
+eyJoaXN0b3J5IjpbLTEwMzYyMzYwMDAsMTA0NDk5Mjg1LC0xMz
+cxNzY0NDAwLDE2OTg4MDQ3ODJdfQ==
 -->
