--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -3,13 +3,19 @@
 ## 19일 월요일
 
 *  용석님 운전자 납면 저해지 확인
-*  무해지상품 분석 마무리단계 >> 누적으로 분석 완료
+*  무해지상품 분석 마무리단계 >> 누적손익 분석 완료
+    - 시나리오 5개 무해지 상품 분석
+
+	| 시나리오  | 가정  | 실제 |
+	|--|--|
+	|  |  |
+
 *  
 
 ## 20일 화요일
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMzYyMzYwMDAsMTA0NDk5Mjg1LC0xMz
-cxNzY0NDAwLDE2OTg4MDQ3ODJdfQ==
+eyJoaXN0b3J5IjpbMjExODAwNzkxMCwxMDQ0OTkyODUsLTEzNz
+E3NjQ0MDAsMTY5ODgwNDc4Ml19
 -->
