MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -7,8 +7,10 @@
     - 시나리오 5개 무해지 상품 분석
 
 	| 시나리오  | 가정  | 실제 |
-	|--|--|
-	|  |  |
+	|--|--|--|
+	|1번시나리오  | DB Pricing | MRZ MV 가정|
+	|1번시나리오  | DB Pricing | MRZ MV 가정|
+	|1번시나리오  | DB Pricing | MRZ MV 가정|
 
 *  
 
@@ -16,6 +18,6 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjExODAwNzkxMCwxMDQ0OTkyODUsLTEzNz
+eyJoaXN0b3J5IjpbMjAyMTI0NDQ0NiwxMDQ0OTkyODUsLTEzNz
 E3NjQ0MDAsMTY5ODgwNDc4Ml19
 -->
