--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -6,11 +6,11 @@
 *  무해지상품 분석 마무리단계 >> 누적손익 분석 완료
     - 시나리오 5개 무해지 상품 분석
 
-	| 시나리오 | 가정 | 실제 |
-	|:--:|:--:|:--:|
-	| 1번시나리오 | DB Pricing | MRZ MV 가정|
-	| 1번시나리오 | DB Pricing | MRZ MV 가정|
-	| 1번시나리오 | DB Pricing | MRZ MV 가정|
+	| 시나리오 | Pricing | 가정 | 실제 |
+	|:--:|:--:|:--:|:--:|
+	| 1번시나리오 | DB Pricing | DB가정 | MRZ MV 가정|
+	| 1번시나리오 | DB Pricing | M가정 |MRZ MV 가정|
+	| 1번시나리오 | DB Pricing | M |MRZ MV 가정|
 
 *  
  
@@ -18,6 +18,7 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NTkyMzk3NCwyMDIxMjQ0NDQ2LDEwND
-Q5OTI4NSwtMTM3MTc2NDQwMCwxNjk4ODA0NzgyXX0=
+eyJoaXN0b3J5IjpbLTE1Nzg4NTQxMTAsLTE3NTkyMzk3NCwyMD
+IxMjQ0NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMCwxNjk4ODA0
+NzgyXX0=
 -->
