--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -6,11 +6,13 @@
 *  무해지상품 분석 마무리단계 >> 누적손익 분석 완료
     - 시나리오 5개 무해지 상품 분석
 
-	| 시나리오 | Pricing | 가정 | 실제 | UFR |
+	| 시나리오 | Pricing | 예상 | 실제 | UFR |
 	|:--:|:--:|:--:|:--:|:--:|
 	| 1번시나리오 | DB Pricing | DB가정 | M가정 | 5.2% |
-	| 1번시나리오 | DB Pricing | M가정 |M가정|
-	| 1번시나리오 | DB Pricing | M |MRZ MV 가정|
+	| 2번시나리오 | DB Pricing | DB가정 | M가정 | 인하 |
+	| 3번시나리오 | DB Pricing | 6차년이후 M가정   | M가정 | 인하 |
+	| 4번시나리오 | DB Pricing | M가정   | M가정 | 인하 |
+	| 5번시나리오 | DB Pricing | M가정   | M가정 | 인하 |
 
 *  
  
@@ -18,7 +20,7 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MzcyNDE3MzMsLTE3NTkyMzk3NCwyMD
+eyJoaXN0b3J5IjpbLTEwNDM5MjcxOTQsLTE3NTkyMzk3NCwyMD
 IxMjQ0NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMCwxNjk4ODA0
 NzgyXX0=
 -->
