--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -11,8 +11,8 @@
 	| 1번시나리오 | DB Pricing | DB가정 | M가정 | 5.2% |
 	| 2번시나리오 | DB Pricing | DB가정 | M가정 | 인하 |
 	| 3번시나리오 | DB Pricing | 6차년이후 M가정   | M가정 | 인하 |
-	| 4번시나리오 | DB Pricing | M가정   | M가정 | 인하 |
-	| 5번시나리오 | DB Pricing | M가정   | M가정 | 인하 |
+	| 4번시나리오 | DB Pricing | 6차년이후 완납 전 M가정  | M가정 | 인하 |
+	| 5번시나리오 | DB Pricing | 6차년이후 완납 전 M_HIGH 가정   | M_HIG가정 | 인하 |
 
 *  
  
@@ -20,7 +20,7 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNDM5MjcxOTQsLTE3NTkyMzk3NCwyMD
-IxMjQ0NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMCwxNjk4ODA0
-NzgyXX0=
+eyJoaXN0b3J5IjpbLTQyNDQxMTkyNiwtMTc1OTIzOTc0LDIwMj
+EyNDQ0NDYsMTA0NDk5Mjg1LC0xMzcxNzY0NDAwLDE2OTg4MDQ3
+ODJdfQ==
 -->
