MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -13,7 +13,21 @@
 	| 3번시나리오 | DB Pricing | 6차년이후 M가정   | M가정 | 인하 |
 	| 4번시나리오 | DB Pricing | 6차년이후 완납 전 M가정  | M가정 | 인하 |
 	| 5번시나리오 | DB Pricing | 6차년이후 완납 전 M_HIGH 가정   | M_HIG가정 | 인하 |
-    - DB 가정
+
+    - DB 예정해지율 가정
+	| 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
+	|:--:|:--:|:--:|:--:|:--:|:--:|
+	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
+
+    - DB 예정해지율 가정
+	| 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
+	|:--:|:--:|:--:|:--:|:--:|:--:|
+	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
+
+    - DB 예정해지율 가정
+	| 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
+	|:--:|:--:|:--:|:--:|:--:|:--:|
+	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
 
 *  
  
@@ -21,7 +35,7 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjgxMjQzMDYwLC0xNzU5MjM5NzQsMjAyMT
-I0NDQ0NiwxMDQ0OTkyODUsLTEzNzE3NjQ0MDAsMTY5ODgwNDc4
-Ml19
+eyJoaXN0b3J5IjpbLTE4Njg4NzUyMDYsLTE3NTkyMzk3NCwyMD
+IxMjQ0NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMCwxNjk4ODA0
+NzgyXX0=
 -->
