MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -24,7 +24,7 @@
 	|:--:|:--:|:--:|:--:|:--:|:--:|
 	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
 
-    - DB 예정해지율 가정
+    - M_HIGH  예정해지율 가정(표준
 	| 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
 	|:--:|:--:|:--:|:--:|:--:|:--:|
 	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
@@ -35,7 +35,7 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4Njg4NzUyMDYsLTE3NTkyMzk3NCwyMD
-IxMjQ0NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMCwxNjk4ODA0
-NzgyXX0=
+eyJoaXN0b3J5IjpbMTAzMzkwNjQxNiwtMTg2ODg3NTIwNiwtMT
+c1OTIzOTc0LDIwMjEyNDQ0NDYsMTA0NDk5Mjg1LC0xMzcxNzY0
+NDAwLDE2OTg4MDQ3ODJdfQ==
 -->
