--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -19,15 +19,15 @@
 	|:--:|:--:|:--:|:--:|:--:|:--:|
 	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
 
-    - DB 예정해지율 가정
+    - M 예정해지율 가정
 	| 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
 	|:--:|:--:|:--:|:--:|:--:|:--:|
 	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
 
-    - M_HIGH  예정해지율 가정(표준
-	| 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
+    - M_HIGH  예정해지율 가정(표준형 대비 비율)
+	| 1 ~ 16 | 17 | 18 | 19 | 20 | 납입후 |
 	|:--:|:--:|:--:|:--:|:--:|:--:|
-	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
+	| 60% | 50% | 40% | 30% | 20% | 22.5% |
 
 *  
  
@@ -35,7 +35,7 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAzMzkwNjQxNiwtMTg2ODg3NTIwNiwtMT
+eyJoaXN0b3J5IjpbLTQwMDQ0MzE4OCwtMTg2ODg3NTIwNiwtMT
 c1OTIzOTc0LDIwMjEyNDQ0NDYsMTA0NDk5Mjg1LC0xMzcxNzY0
 NDAwLDE2OTg4MDQ3ODJdfQ==
 -->
