MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -30,13 +30,15 @@
 	| 60% | 50% | 40% | 30% | 20% | 22.5% |
 
 *  무해지상품 분석 결과 요약
-	- 
+	-  실제 현금흐름이 같다면 전기간 명목손익의 합계는 동일
+	-  AOCI 에 따른 총포괄손익도 향후 중요 포인트
+	-  
  
 ## 20일 화요일
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0ODE0ODU5OTIsLTQwMDQ0MzE4OCwtMT
-g2ODg3NTIwNiwtMTc1OTIzOTc0LDIwMjEyNDQ0NDYsMTA0NDk5
-Mjg1LC0xMzcxNzY0NDAwLDE2OTg4MDQ3ODJdfQ==
+eyJoaXN0b3J5IjpbNzkzMDA3MTEyLC00MDA0NDMxODgsLTE4Nj
+g4NzUyMDYsLTE3NTkyMzk3NCwyMDIxMjQ0NDQ2LDEwNDQ5OTI4
+NSwtMTM3MTc2NDQwMCwxNjk4ODA0NzgyXX0=
 -->
