MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -14,6 +14,7 @@
 	| 4번시나리오 | DB Pricing | 6차년이후 완납 전 M가정  | M가정 | 인하 |
 	| 5번시나리오 | DB Pricing | 6차년이후 완납 전 M_HIGH 가정   | M_HIG가정 | 인하 |
 
+
     - DB 예정해지율 가정
    
 	| 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
@@ -38,13 +39,13 @@
 	-  가장 현실적인 4번 시나리오의 경우 17년차에 손실 전환
 	-  신계약 누적을 해도 csm이 작아서 더이상 손실이 뒤로 밀리지 않음
 	-  운용수익은 net cash 를 이용하여 2.25% 복리 가정으로 재투자 수익
-	-  OCI변동은
+	-  OCI변동은 할인율 변동에 따라 움직임
  
 ## 20일 화요일
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg4MTY5MzUyNywtNDAwNDQzMTg4LC0xOD
+eyJoaXN0b3J5IjpbMTAwNjQ1MjcwMSwtNDAwNDQzMTg4LC0xOD
 Y4ODc1MjA2LC0xNzU5MjM5NzQsMjAyMTI0NDQ0NiwxMDQ0OTky
 ODUsLTEzNzE3NjQ0MDAsMTY5ODgwNDc4Ml19
 -->
