MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -26,14 +26,14 @@
 	| 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
 	|:--:|:--:|:--:|:--:|:--:|:--:|
 	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
+	
 
-    - M_HIGH  예정해지율 가정(표준형 대비 비율)<br/> 
-<br/> 
-
+    - M_HIGH  예정해지율 가정(표준형 대비 비율)
+     
 	| 1 ~ 16 | 17 | 18 | 19 | 20 | 납입후 |
 	|:--:|:--:|:--:|:--:|:--:|:--:|
 	| 60% | 50% | 40% | 30% | 20% | 22.5% |
-<br/> 
+
 *  무해지상품 분석 결과 요약
 	-  실제 현금흐름이 같다면 전기간 명목손익의 합계는 동일
 	-  AOCI 에 따른 총포괄손익도 향후 중요 포인트
@@ -46,8 +46,8 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMDgyMDc3MiwxMDA2NDUyNzAxLC00MD
-A0NDMxODgsLTE4Njg4NzUyMDYsLTE3NTkyMzk3NCwyMDIxMjQ0
-NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMCwxNjk4ODA0NzgyXX
-0=
+eyJoaXN0b3J5IjpbLTE0MDE3MDc1OTcsLTExMDgyMDc3MiwxMD
+A2NDUyNzAxLC00MDA0NDMxODgsLTE4Njg4NzUyMDYsLTE3NTky
+Mzk3NCwyMDIxMjQ0NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMC
+wxNjk4ODA0NzgyXX0=
 -->
