--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -14,19 +14,17 @@
 	| 3번시나리오 | DB Pricing | 6차년이후 M가정   | M가정 | 인하 |
 	| 4번시나리오 | DB Pricing | 6차년이후 완납 전 M가정  | M가정 | 인하 |
 	| 5번시나리오 | DB Pricing | 6차년이후 완납 전 M_HIGH 가정   | M_HIG가정 | 인하 |
+<br>
 
-<br/>
-
-    - DB 예정해지율 가정
-   
-	| 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
-	|:--:|:--:|:--:|:--:|:--:|:--:|
-	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
+   - DB 예정해지율 가정
+  
+| 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
+|:--:|:--:|:--:|:--:|:--:|:--:|
+| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
 	
-<br/>
     - M 예정해지율 가정
     
-	| 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
+	| 1 | 2 | 3  10 | 11 ~ 15 | 16~ | 납입후 |
 	|:--:|:--:|:--:|:--:|:--:|:--:|
 	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
 	
@@ -49,8 +47,8 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MTk1MjE0ODYsLTExMDgyMDc3MiwxMD
-A2NDUyNzAxLC00MDA0NDMxODgsLTE4Njg4NzUyMDYsLTE3NTky
-Mzk3NCwyMDIxMjQ0NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMC
-wxNjk4ODA0NzgyXX0=
+eyJoaXN0b3J5IjpbLTcwNDI5NzM2MiwtMTEwODIwNzcyLDEwMD
+Y0NTI3MDEsLTQwMDQ0MzE4OCwtMTg2ODg3NTIwNiwtMTc1OTIz
+OTc0LDIwMjEyNDQ0NDYsMTA0NDk5Mjg1LC0xMzcxNzY0NDAwLD
+E2OTg4MDQ3ODJdfQ==
 -->
