MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -14,26 +14,27 @@
 	| 3번시나리오 | DB Pricing | 6차년이후 M가정   | M가정 | 인하 |
 	| 4번시나리오 | DB Pricing | 6차년이후 완납 전 M가정  | M가정 | 인하 |
 	| 5번시나리오 | DB Pricing | 6차년이후 완납 전 M_HIGH 가정   | M_HIG가정 | 인하 |
-<br>
 
+<br>
    - DB 예정해지율 가정
   
 | 1 | 2 | 3 ~ 10 | 11 ~ 15 | 16~ | 납입후 |
 |:--:|:--:|:--:|:--:|:--:|:--:|
 | 8% | 6% | 5% | 4% | 2.5% | 0.7% |
-	
-    - M 예정해지율 가정
-    
-	| 1 | 2 | 3  10 | 11 ~ 15 | 16~ | 납입후 |
-	|:--:|:--:|:--:|:--:|:--:|:--:|
-	| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
-	
 
-    - M_HIGH  예정해지율 가정(표준형 대비 비율)
+<br>	
+   - M 예정해지율 가정
      
-	| 1 ~ 16 | 17 | 18 | 19 | 20 | 납입후 |
-	|:--:|:--:|:--:|:--:|:--:|:--:|
-	| 60% | 50% | 40% | 30% | 20% | 22.5% |
+| 1 ~ | 2 | 3  10 | 11 ~ 15 | 16~ | 납입후 |
+|:--:|:--:|:--:|:--:|:--:|:--:|
+| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
+	
+<br>	
+   - M_HIGH  예정해지율 가정(표준형 대비 비율)
+    
+| 1 ~ 16 | 17 | 18 | 19 | 20 | 납입후 |
+|:--:|:--:|:--:|:--:|:--:|:--:|
+| 60% | 50% | 40% | 30% | 20% | 22.5% |
 
 *  무해지상품 분석 결과 요약
 	-  실제 현금흐름이 같다면 전기간 명목손익의 합계는 동일
@@ -47,8 +48,8 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcwNDI5NzM2MiwtMTEwODIwNzcyLDEwMD
-Y0NTI3MDEsLTQwMDQ0MzE4OCwtMTg2ODg3NTIwNiwtMTc1OTIz
-OTc0LDIwMjEyNDQ0NDYsMTA0NDk5Mjg1LC0xMzcxNzY0NDAwLD
-E2OTg4MDQ3ODJdfQ==
+eyJoaXN0b3J5IjpbLTE1OTIzMjg2NjgsLTExMDgyMDc3MiwxMD
+A2NDUyNzAxLC00MDA0NDMxODgsLTE4Njg4NzUyMDYsLTE3NTky
+Mzk3NCwyMDIxMjQ0NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMC
+wxNjk4ODA0NzgyXX0=
 -->
