MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -23,11 +23,11 @@
 | 8% | 6% | 5% | 4% | 2.5% | 0.7% |
 
 <br>	
-   - M 예정해지율 가정
+   - M 예정해지율 가정(표준형 대비 비율)
      
-| 1 ~ | 2 | 3  10 | 11 ~ 15 | 16~ | 납입후 |
-|:--:|:--:|:--:|:--:|:--:|:--:|
-| 8% | 6% | 5% | 4% | 2.5% | 0.7% |
+| 1~2 | 3 | 4년차이후 | 납입후 |
+|:--:|:--:|:--:|:--:|
+| 실적 | 62% | 30~40% | shock 환급률 | 
 	
 <br>	
    - M_HIGH  예정해지율 가정(표준형 대비 비율)
@@ -48,7 +48,7 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1OTIzMjg2NjgsLTExMDgyMDc3MiwxMD
+eyJoaXN0b3J5IjpbLTIwMjM3MjQ5ODAsLTExMDgyMDc3MiwxMD
 A2NDUyNzAxLC00MDA0NDMxODgsLTE4Njg4NzUyMDYsLTE3NTky
 Mzk3NCwyMDIxMjQ0NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMC
 wxNjk4ODA0NzgyXX0=
