MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -4,16 +4,16 @@
 
 *  용석님 운전자 납면 저해지 확인
 *  무해지상품 분석 마무리단계 >> 누적손익 분석 완료
-<br/>
-    - 시나리오 5개 무해지 상품  분석
+<br>
+ * 시나리오 5개 무해지 상품  분석
 
-	| 시나리오 | Pricing | 예상 | 실제 | UFR |
-	|:--:|:--:|:--:|:--:|:--:|
-	| 1번시나리오 | DB Pricing | DB가정 | M가정 | 5.2% |
-	| 2번시나리오 | DB Pricing | DB가정 | M가정 | 인하 |
-	| 3번시나리오 | DB Pricing | 6차년이후 M가정   | M가정 | 인하 |
-	| 4번시나리오 | DB Pricing | 6차년이후 완납 전 M가정  | M가정 | 인하 |
-	| 5번시나리오 | DB Pricing | 6차년이후 완납 전 M_HIGH 가정   | M_HIG가정 | 인하 |
+| 시나리오 | Pricing | 예상 | 실제 | UFR |
+|:--:|:--:|:--:|:--:|:--:|
+| 1번시나리오 | DB Pricing | DB가정 | M가정 | 5.2% |
+| 2번시나리오 | DB Pricing | DB가정 | M가정 | 인하 |
+| 3번시나리오 | DB Pricing | 6차년이후 M가정   | M가정 | 인하 |
+| 4번시나리오 | DB Pricing | 6차년이후 완납 전 M가정  | M가정 | 인하 |
+| 5번시나리오 | DB Pricing | 6차년이후 완납 전 M_HIGH 가정   | M_HIG가정 | 인하 |
 
 <br>
    - DB 예정해지율 가정
@@ -27,7 +27,7 @@
      
 | 1~2 | 3 | 4년차이후 | 납입후 |
 |:--:|:--:|:--:|:--:|
-| 실적 | 62% | 30~40% | shock 환급률 | 
+| 실적 | 62% | 30~40% | shock(1년차)/환급률 | 
 	
 <br>	
    - M_HIGH  예정해지율 가정(표준형 대비 비율)
@@ -48,7 +48,7 @@
 
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMjM3MjQ5ODAsLTExMDgyMDc3MiwxMD
+eyJoaXN0b3J5IjpbLTE4OTIzMjk4MjMsLTExMDgyMDc3MiwxMD
 A2NDUyNzAxLC00MDA0NDMxODgsLTE4Njg4NzUyMDYsLTE3NTky
 Mzk3NCwyMDIxMjQ0NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMC
 wxNjk4ODA0NzgyXX0=
