MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -46,10 +46,14 @@
  
 ## 20일 화요일
 
-* 
+*  정의철님 
+   - 예정사업비 업로드 테스트 진행 중
+ *   고용석님
+   - 예정사업비 업로드 테스트 진행 중
+     
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4OTIzMjk4MjMsLTExMDgyMDc3MiwxMD
-A2NDUyNzAxLC00MDA0NDMxODgsLTE4Njg4NzUyMDYsLTE3NTky
-Mzk3NCwyMDIxMjQ0NDQ2LDEwNDQ5OTI4NSwtMTM3MTc2NDQwMC
-wxNjk4ODA0NzgyXX0=
+eyJoaXN0b3J5IjpbLTE3MDI0MzQxMCwtMTg5MjMyOTgyMywtMT
+EwODIwNzcyLDEwMDY0NTI3MDEsLTQwMDQ0MzE4OCwtMTg2ODg3
+NTIwNiwtMTc1OTIzOTc0LDIwMjEyNDQ0NDYsMTA0NDk5Mjg1LC
+0xMzcxNzY0NDAwLDE2OTg4MDQ3ODJdfQ==
 -->
