--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -48,11 +48,15 @@
 
 *  정의철님 
    - 예정사업비 업로드 테스트 진행 중
- *   고용석님
-   - 예정사업비 업로드 테스트 진행 중
+   
+ *  고용석님
+    - M Drive 복합위험률 생성 향후 프로펫에서도 정의 필요
+    - 복합위험률 관계 정의 필요
+    - 산출단위 로직 완료 및 금일 배포 예정
+    - 위험률이 59세까지 이
      
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MDI0MzQxMCwtMTg5MjMyOTgyMywtMT
+eyJoaXN0b3J5IjpbMTE1MzUyOTA5NiwtMTg5MjMyOTgyMywtMT
 EwODIwNzcyLDEwMDY0NTI3MDEsLTQwMDQ0MzE4OCwtMTg2ODg3
 NTIwNiwtMTc1OTIzOTc0LDIwMjEyNDQ0NDYsMTA0NDk5Mjg1LC
 0xMzcxNzY0NDAwLDE2OTg4MDQ3ODJdfQ==
