MRZ/SOL/4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/4월/4주차.md
+++ b/MRZ/SOL/4월/4주차.md
@@ -53,11 +53,16 @@
     - M Drive 복합위험률 생성 향후 프로펫에서도 정의 필요
     - 복합위험률 관계 정의 필요
     - 산출단위 로직 완료 및 금일 배포 예정
-    - 위험률이 59세까지 이
+    - 위험률이 59세까지 있는데 만기가 60세까지 있어서 60세 위험률을 어떻게 정의를 해야하는지 필요
+    -  위의 case 의 경우 0을 넣는건 상품파트에서 좋아하지 않음 why?
+  
+  * 전혁준님
+     -  금일 중 M Drive 모델링 완료 목표
+     -ㅍ
      
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE1MzUyOTA5NiwtMTg5MjMyOTgyMywtMT
-EwODIwNzcyLDEwMDY0NTI3MDEsLTQwMDQ0MzE4OCwtMTg2ODg3
-NTIwNiwtMTc1OTIzOTc0LDIwMjEyNDQ0NDYsMTA0NDk5Mjg1LC
-0xMzcxNzY0NDAwLDE2OTg4MDQ3ODJdfQ==
+eyJoaXN0b3J5IjpbLTEyOTQ4MTU2MjIsLTE4OTIzMjk4MjMsLT
+ExMDgyMDc3MiwxMDA2NDUyNzAxLC00MDA0NDMxODgsLTE4Njg4
+NzUyMDYsLTE3NTkyMzk3NCwyMDIxMjQ0NDQ2LDEwNDQ5OTI4NS
+wtMTM3MTc2NDQwMCwxNjk4ODA0NzgyXX0=
 -->
