나의일상/2021.4월/19일(일요일) 이발&주말출근.md updated from https://stackedit.io/

--- a/나의일상/2021.4월/19일(일요일) 이발&주말출근.md
+++ b/나의일상/2021.4월/19일(일요일) 이발&주말출근.md
@@ -8,7 +8,8 @@
 ## 점심
 
 * 12시 20분쯤 회사에 도착 
-* 
+* s1~s5 결과를 확인하였으나 누적손익이 맞지 않아서 오류 수정 후 run 
+* 읙s3를 결과를 비교하여 오류를 발견 후 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNzczNzg1NjldfQ==
+eyJoaXN0b3J5IjpbLTM1NjldfQ==
 -->
