나의일상/2021.4월/19일(일요일) 이발&주말출근.md updated from https://stackedit.io/

--- a/나의일상/2021.4월/19일(일요일) 이발&주말출근.md
+++ b/나의일상/2021.4월/19일(일요일) 이발&주말출근.md
@@ -8,8 +8,9 @@
 ## 점심
 
 * 12시 20분쯤 회사에 도착 
-* s1~s5 결과를 확인하였으나 누적손익이 맞지 않아서 오류 수정 후 run 
-* 읙s3를 결과를 비교하여 오류를 발견 후 
+* s1~s5 결과를 확인하였으나 흐름이 이상한 부분을 발견
+* 의겸님이 3시에 도착하여 s3를 결과를 통해 s4, s5 누적손익이 맞지 않는 오류 도출
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM1NjldfQ==
+eyJoaXN0b3J5IjpbMTUzMjkyODc3OV19
 -->
