--- a/나의일상/2021.4월/19일(일요일) 이발&주말출근.md
+++ b/나의일상/2021.4월/19일(일요일) 이발&주말출근.md
@@ -9,14 +9,15 @@
 
 * 12시 20분쯤 회사에 도착 
 * s1~s5 결과를 확인하였으나 흐름이 이상한 부분을 발견
-* 의겸님이 3시에 도착하여 s3를 결과를 통해 s4, s5 누적손익이 맞지 않는 오류 도출
+* 의겸님이 3시에 도착하여 s3를 결과를 통해 s4, s5 누적손익이 맞지 않는 오류 도출 >> 시가 할ㄴ
 * 엑셀 셀별로 일일이 수정해야 하는 어려움이 발생
 
 ## 저녁
 
 * 저녁까지 오류 수정하여 9시 반에 run 을 수행하려고 하였으나 vba가 잘 돌지 않는 어려움이 발생
 * 문제점은 운영망에서 여러개를 원격접속 하는 경우 복사 / 붙여넣기 과정에서 오류 발생
-*  
+*  내 업무망pc 와 영빈형  pc, 의겸님 pc, 운영망에서 4개 시나리오를 돌리고 퇴근
+*  10시에 퇴근해서 집에서 stack edit를 발견하고 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMzQ5Mzc0MjJdfQ==
+eyJoaXN0b3J5IjpbLTE3NDY4OTEwODNdfQ==
 -->
