MRZ/IFRS/업무내용/무해지 분석 요약.md updated from https://stackedit.io/

--- a/MRZ/IFRS/업무내용/무해지 분석 요약.md
+++ b/MRZ/IFRS/업무내용/무해지 분석 요약.md
@@ -1,5 +1,8 @@
-# 무해지 상품 분석 내용
+# 무해지 상품 분석 내용(2021.4월)
 
+*   DB  무해지상품의 가격 하락으로 인한 매출 감소 발생
+*  가격을 어떻게 하락시켰는가? 
+   - 
 *  무해지상품 분석 마무리단계 >> 누적손익 분석 완료
 <br>
  * 시나리오 5개 무해지 상품  분석
@@ -42,5 +45,5 @@
 	-  OCI변동은 할인율 변동에 따라 움직임
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTg1NTkyMTY5XX0=
+eyJoaXN0b3J5IjpbMjEwODAwNTA3OF19
 -->
