MRZ/IFRS/업무내용/무해지 분석 요약.md updated from https://stackedit.io/

--- a/MRZ/IFRS/업무내용/무해지 분석 요약.md
+++ b/MRZ/IFRS/업무내용/무해지 분석 요약.md
@@ -2,7 +2,8 @@
 
 *   DB  무해지상품의 가격 하락으로 인한 매출 감소 발생
 *  가격을 어떻게 하락시켰는가? 
-   - 
+   -  납기 후 10% 환급율 상품에서 납기 후 예정해지율을 높게 씀
+   -  리스크 입장에서 싸게 받고 완납 후 예정해지율보다 실제 해지율이 낮아서 유지율이 높은 경우 보험금  
 *  무해지상품 분석 마무리단계 >> 누적손익 분석 완료
 <br>
  * 시나리오 5개 무해지 상품  분석
@@ -45,5 +46,5 @@
 	-  OCI변동은 할인율 변동에 따라 움직임
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEwODAwNTA3OF19
+eyJoaXN0b3J5IjpbMTA4OTAwNTA5Nl19
 -->
