MRZ/IFRS/업무내용/무해지 분석 요약.md updated from https://stackedit.io/

--- a/MRZ/IFRS/업무내용/무해지 분석 요약.md
+++ b/MRZ/IFRS/업무내용/무해지 분석 요약.md
@@ -1,12 +1,16 @@
 # 무해지 상품 분석 내용(2021.4월)
 
+## 이슈 부분
 *   DB  무해지상품의 가격 하락으로 인한 매출 감소 발생
 *  가격을 어떻게 하락시켰는가? 
    -  납기 후 10% 환급율 상품에서 납기 후 예정해지율을 높게 씀
-   -  리스크 입장에서 싸게 받고 완납 후 예정해지율보다 실제 해지율이 낮아서 유지율이 높은 경우 보험금 등의 발생으로 인해 손실이 크게 발생
+   -  리스크 입장에서 싸게 받고 완납 후 예정해지율보다 실제 해지율이 낮아서 유지율이 높은 경우 완납 후 발생하는  보험금 등의 발생으로 인해 손실이 크게 발생
    -  UFR이 낮을 수록 손실상품으로 판정
+   -  현재 UFR이 높아 IFRS 기준에서 이익이 나는 상품으로 보임
    -  금리민감도가 매우 큰 상품이라 **금리민감에 대한 손실액**을 IFRS에서는 어떻게 평가를 해야 하는지 고민을 하게 되었음
-    
+ 
+## 문제 해결 접근 방법
+  
 *  무해지상품 분석 마무리단계 >> 누적손익 분석 완료
 <br>
  * 시나리오 5개 무해지 상품  분석
@@ -49,5 +53,5 @@
 	-  OCI변동은 할인율 변동에 따라 움직임
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNzczMjgxNTldfQ==
+eyJoaXN0b3J5IjpbLTE4NTczMjc0MjhdfQ==
 -->
