MRZ/IFRS/업무내용/무해지 분석 요약.md updated from https://stackedit.io/

--- a/MRZ/IFRS/업무내용/무해지 분석 요약.md
+++ b/MRZ/IFRS/업무내용/무해지 분석 요약.md
@@ -10,6 +10,11 @@
    -  금리민감도가 매우 큰 상품이라 **금리민감에 대한 손실액**을 IFRS에서는 어떻게 평가를 해야 하는지 고민을 하게 되었음
  
 ## 문제 해결 접근 방법
+
+* 신계약 하나로로 IFRS17 하에서 이익 발생 구조 파악
+* MV와의 비교를 위해 가장 차이가 발생하는 손해율 가정은 통일
+* 무해지(납기 후 10% 환급) 상품의 DB 가격을 모델링하여 작업 진행
+* 크게 5가지 시나리오를 통
   
 *  무해지상품 분석 마무리단계 >> 누적손익 분석 완료
 <br>
@@ -53,5 +58,5 @@
 	-  OCI변동은 할인율 변동에 따라 움직임
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NTczMjc0MjhdfQ==
+eyJoaXN0b3J5IjpbLTk1MzQyNTMyMl19
 -->
