MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -21,7 +21,11 @@
   * 전혁준님
      -  금일 중 M Drive 모델링 완료 목표
     
+    ## 21일 수요일
+* 정의철님 : 가입금액 단위 배수 코드 머지 중
+*
+*  고용석님 :    
      
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjA5NDI4MzQ3XX0=
+eyJoaXN0b3J5IjpbLTE4NjEyNDg4MjIsNjA5NDI4MzQ3XX0=
 -->
