MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -26,7 +26,7 @@
   - 가입금액 단위 배수 코드 머지 중
 * 고용석님
   - 시급한 과제 레이아웃 이슈 문제 
-  -   
+  - 도커이미지   
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODMyNzY0OTExLDYwOTQyODM0N119
+eyJoaXN0b3J5IjpbLTEyODc5ODYyNjEsNjA5NDI4MzQ3XX0=
 -->
