MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -26,7 +26,10 @@
   - 가입금액 단위 배수 코드 머지 중
 * 고용석님
   - 시급한 과제 레이아웃 이슈 문제 
-  - 도커이미지   
+  - 도커이미지(?) >> 쿠버네스티 관련 내용 ?? 잘 모르겠음
+ 
+ * 전혁준 
+ * 선행해야하는 작업 list // 위험률 맵핑은 이 list중 최우선 단계일뿐..   
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyODc5ODYyNjEsNjA5NDI4MzQ3XX0=
+eyJoaXN0b3J5IjpbLTc4MDM4MDY4MSw2MDk0MjgzNDddfQ==
 -->
