MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -27,9 +27,10 @@
 * 고용석님
   - 시급한 과제 레이아웃 이슈 문제 
   - 도커이미지(?) >> 쿠버네스티 관련 내용 ?? 잘 모르겠음
- 
  * 전혁준 
- * 선행해야하는 작업 list // 위험률 맵핑은 이 list중 최우선 단계일뿐..   
+   - 없음 
+  * 양시열
+    -  선행해야하는 작업 list // 위험률 맵핑은 이 list중 최우선 단계일뿐.. // 위험률 뿐 아니라 모델링 자동화에 필요한 선행작업   
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc4MDM4MDY4MSw2MDk0MjgzNDddfQ==
+eyJoaXN0b3J5IjpbLTE2NDQyNTI5ODEsNjA5NDI4MzQ3XX0=
 -->
