--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -32,7 +32,7 @@
   * 양시열
     -  선행해야하는 작업 list 작업 진행 해야함
     - 위험률 맵핑은 이 list중 최우선 단계일뿐.. 
-    - 위험률 맵핑 뿐 아니라 모델링 자동화에 필요한 선행작업   
+    - 위험률 맵핑 뿐 아니라 모델링 자동화에 필요한 선행작업  list화 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEyMTc1MTY2LDYwOTQyODM0N119
+eyJoaXN0b3J5IjpbOTc3NzI5NDIwLDYwOTQyODM0N119
 -->
