MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -21,7 +21,7 @@
   * 전혁준님
      -  금일 중 M Drive 모델링 완료 목표
     
-    ## 21일 수요일
+## 21일 수요일
 * 정의철님 
   - 가입금액 단위 배수 코드 머지 중
 * 고용석님
@@ -34,5 +34,6 @@
     - 위험률 맵핑은 이 list중 최우선 단계일뿐.. 
     - 위험률 맵핑 뿐 아니라 모델링 자동화에 필요한 선행작업  list화 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTc3NzI5NDIwLDYwOTQyODM0N119
+eyJoaXN0b3J5IjpbLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOT
+QyODM0N119
 -->
