--- a/나의일상/2021.4월/20일(월요일) 무해지 최종보고.md
+++ b/나의일상/2021.4월/20일(월요일) 무해지 최종보고.md
@@ -2,7 +2,15 @@
 
 ## 아침
 
-* 8시 반 출근하여 
+* 8시 반 출근하여 에러 확인
+* s1~s3만 결과가 정상적으로 나온거 확인 
+
+## 점심
+
+* s4,s5 가정 변경 시 현금흐름 갖고 오는 부분 로직 오류 원인 파악
+* 수정 후 VBA 재산출 진행 
+
+## 전
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNDI5MDI2MV19
+eyJoaXN0b3J5IjpbLTc1NDA5MDc3NF19
 -->
