--- a/나의일상/2021.4월/20일(월요일) 무해지 최종보고.md
+++ b/나의일상/2021.4월/20일(월요일) 무해지 최종보고.md
@@ -10,7 +10,11 @@
 * s4,s5 가정 변경 시 현금흐름 갖고 오는 부분 로직 오류 원인 파악
 * 수정 후 VBA 재산출 진행 
 
-## 전
+## 저녁
+
+* s4 최초csm오류 부분 확인 
+* 첫 시점의 현금흐름을 M가정의 현금흐름을 갖고오는 것으로 파악
+* 첫 시점의 현금흐름을 DB / M / DB 가정의 현금
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc1NDA5MDc3NF19
+eyJoaXN0b3J5IjpbLTE0NzIyMzYzMTBdfQ==
 -->
