나의일상/2021.4월/20일(월요일) 무해지 최종보고.md updated from https://stackedit.io/

--- a/나의일상/2021.4월/20일(월요일) 무해지 최종보고.md
+++ b/나의일상/2021.4월/20일(월요일) 무해지 최종보고.md
@@ -2,6 +2,7 @@
 
 ## 아침
 
+* 6시 40분쯤 기상하여 50분에 와이프랑 판교로 출발
 * 8시 반 출근하여 에러 확인
 * s1~s3만 결과가 정상적으로 나온거 확인 
 
@@ -19,7 +20,8 @@
 * 첫 시점의 현금흐름을 DB / M / DB 가정의 현금흐름으로 갖고오도록 수정하여 재산출
 * 저녁 9 시쯤 최종 보고 드림
 * 저녁 10시반까지 메일 보내고 와이프 데리러 수내로 감
-* 
+* 정자에서 만나서 집으로 출발
+*  12시쯤 취침
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjIzNjk2MzY3XX0=
+eyJoaXN0b3J5IjpbMTk4OTc5ODcxM119
 -->
