MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -33,7 +33,11 @@
     -  선행해야하는 작업 list 작업 진행 해야함
     - 위험률 맵핑은 이 list중 최우선 단계일뿐.. 
     - 위험률 맵핑 뿐 아니라 모델링 자동화에 필요한 선행작업  list화 
+    
+ ### 위험률 관련 회의
+* 기존 논의만 하다가 남은 이슈
+   - 트 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOT
-QyODM0N119
+eyJoaXN0b3J5IjpbMTk5MTE2MDAyLC0xODgzMzQ5MjM2LDk3Nz
+cyOTQyMCw2MDk0MjgzNDddfQ==
 -->
