MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -36,8 +36,12 @@
     
  ### 위험률 관련 회의
 * 기존 논의만 하다가 남은 이슈
-   - 트 
+   - ex) 특정성별만 관리하고 있는 위험률 
+         >> 구분코드 성별을 넣어서 관리하자
+   - 관리와 관리화면이 동반되어야 한다
+  
+  
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk5MTE2MDAyLC0xODgzMzQ5MjM2LDk3Nz
+eyJoaXN0b3J5IjpbNzU1OTc2MTk5LC0xODgzMzQ5MjM2LDk3Nz
 cyOTQyMCw2MDk0MjgzNDddfQ==
 -->
