MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -40,8 +40,10 @@
          >> 구분코드 성별을 넣어서 관리하자
    - 관리와 관리화면이 동반되어야 한다
   
-  
+ * 상해급수 구분자에 1 / 2 / 3 / 단일률 이 있으면 단일률을 분리해서 가져가자
+ * 차량용도 비운전자 위험률 >> 위험률 통합해서 가져가자 
+ * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzU1OTc2MTk5LC0xODgzMzQ5MjM2LDk3Nz
-cyOTQyMCw2MDk0MjgzNDddfQ==
+eyJoaXN0b3J5IjpbLTE5MzI5NTIyNTYsLTE4ODMzNDkyMzYsOT
+c3NzI5NDIwLDYwOTQyODM0N119
 -->
