--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -40,10 +40,13 @@
          >> 구분코드 성별을 넣어서 관리하자
    - 관리와 관리화면이 동반되어야 한다
   
- * 상해급수 구분자에 1 / 2 / 3 / 단일률 이 있으면 단일률을 분리해서 가져가자
+ * 상해급수 구분자에 1 / 2 / 3 / 단일률 이 구분 >> 단일률을 분리해서 별도의 위험률코드를 가져가자
  * 차량용도 비운전자 위험률 >> 위험률 통합해서 가져가자 
- * 
+ * 치아 관련 영구치 - 유치 합산
+    - 연령범위 확장 0으로 채워서 가자
+    - 위험률 값을 임의로 0을 채워서 가는건 바람직한 방향은 아니다 
+    - 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MzI5NTIyNTYsLTE4ODMzNDkyMzYsOT
-c3NzI5NDIwLDYwOTQyODM0N119
+eyJoaXN0b3J5IjpbNjIxNDQ2NDE2LC0xODgzMzQ5MjM2LDk3Nz
+cyOTQyMCw2MDk0MjgzNDddfQ==
 -->
