--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -42,11 +42,14 @@
   
  * 상해급수 구분자에 1 / 2 / 3 / 단일률 이 구분 >> 단일률을 분리해서 별도의 위험률코드를 가져가자
  * 차량용도 비운전자 위험률 >> 위험률 통합해서 가져가자 
- * 치아 관련 영구치 - 유치 합산
+ * 치아 관련 영구치 - 유치 합산(담보단의 만기가 연령률 가지고 있는 경우보다 큰 경우)
     - 연령범위 확장 0으로 채워서 가자
     - 위험률 값을 임의로 0을 채워서 가는건 바람직한 방향은 아니다 
-    - 
+ * 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
+    - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
+    - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
+ * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjIxNDQ2NDE2LC0xODgzMzQ5MjM2LDk3Nz
-cyOTQyMCw2MDk0MjgzNDddfQ==
+eyJoaXN0b3J5IjpbMTczODY4MTQyMywtMTg4MzM0OTIzNiw5Nz
+c3Mjk0MjAsNjA5NDI4MzQ3XX0=
 -->
