--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -48,8 +48,9 @@
  * 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
     - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
- * 
+ * s비율 산출 시 비용손해인 경우 0이어야 함
+    - MR002225차량 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTczODY4MTQyMywtMTg4MzM0OTIzNiw5Nz
-c3Mjk0MjAsNjA5NDI4MzQ3XX0=
+eyJoaXN0b3J5IjpbMjIxMTc2NTIsLTE4ODMzNDkyMzYsOTc3Nz
+I5NDIwLDYwOTQyODM0N119
 -->
