--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -49,9 +49,11 @@
     - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
  * s비율 산출 시 비용손해인 경우 0이어야 함
-    - MR002225 차량가액보장  / 출시이후 경과기간 / 자기부담금비율 / 경과기간 [1-3] >> 비용손해인지 아닌지 엔진에서 처리해주어야 함
+    - MR002225 차량가액보장  / 출시이후 경과기간 / 자기부담금비율 / 경과기간 [1-3] 
+      ::  연령률에서도  비용손해인지 아닌지 엔진에서 처리해주어야 함
+     
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjMwNjYwNTU2LC0xODgzMzQ5MjM2LDk3Nz
+eyJoaXN0b3J5IjpbLTE3MTc5MTY1LC0xODgzMzQ5MjM2LDk3Nz
 cyOTQyMCw2MDk0MjgzNDddfQ==
 -->
