MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -37,7 +37,8 @@
  ### 위험률 관련 회의
 * 기존 논의만 하다가 남은 이슈
    - ex) 특정성별만 관리하고 있는 위험률 
-         >> 구분코드 성별을 넣어서 관리하자
+        > 구분코드 성별을 넣어서 관리하자
+        
    - 관리와 관리화면이 동반되어야 한다
   
  * 상해급수 구분자에 1 / 2 / 3 / 단일률 이 구분 >> 단일률을 분리해서 별도의 위험률코드를 가져가자
@@ -46,6 +47,7 @@
     - 연령범위 확장 0으로 채워서 가자
     - 위험률 값을 임의로 0을 채워서 가는건 바람직한 방향은 아니다 
     - 납입면제 급부에 사용하는 위험률을 0세부터 적용
+    - 
  * 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
     - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
@@ -53,7 +55,8 @@
     - MR002225 차량가액보장  / 출시이후 경과기간 / 자기부담금비율 / 경과기간 [1-3] 
       ::  연령률에서도  비용손해인지 아닌지 엔진에서 처리해주어야 함
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
+ *  
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc0NTcxNTU5NiwtMTg4MzM0OTIzNiw5Nz
+eyJoaXN0b3J5IjpbLTU1NjIzMjk1NywtMTg4MzM0OTIzNiw5Nz
 c3Mjk0MjAsNjA5NDI4MzQ3XX0=
 -->
