--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -47,7 +47,8 @@
     - 연령범위 확장 0으로 채워서 가자
     - 위험률 값을 임의로 0을 채워서 가는건 바람직한 방향은 아니다 
     - 납입면제 급부에 사용하는 위험률을 0세부터 적용
-    - 
+    - 단일탈퇴에서는 오류 다중탈퇴인 경우 연령이 없는 경우 0으로 적용할 수 있도록 하는 것이 어떤지?
+     ex) 말기폐질환 15세~  일반암 0세~
  * 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
     - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
@@ -57,6 +58,6 @@
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
  *  
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU1NjIzMjk1NywtMTg4MzM0OTIzNiw5Nz
+eyJoaXN0b3J5IjpbMTQ3MjcyMDMxMCwtMTg4MzM0OTIzNiw5Nz
 c3Mjk0MjAsNjA5NDI4MzQ3XX0=
 -->
