MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -46,7 +46,7 @@
  * 치아 관련 영구치 - 유치 합산(담보단의 만기가 연령률 가지고 있는 경우보다 큰 경우)
     - 연령범위 확장 0으로 채워서 가자
     - 위험률 값을 임의로 0을 채워서 가는건 바람직한 방향은 아니다 
-    - 납입면제 급부에 사용하는 위험률을 0세부터 적용
+ *  납입면제 급부에 사용하는 위험률을 중 연령이 없는 경우 어떻게 처리??
     - 단일탈퇴에서는 오류 다중탈퇴인 경우 연령이 없는 경우 0으로 적용할 수 있도록 하는 것이 어떤지?
      ex) 말기폐질환 15세~  일반암 0세~
  * 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
@@ -56,8 +56,9 @@
     - MR002225 차량가액보장  / 출시이후 경과기간 / 자기부담금비율 / 경과기간 [1-3] 
       ::  연령률에서도  비용손해인지 아닌지 엔진에서 처리해주어야 함
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
- *  
+ * 복합위험률 관리 주체
+    - 연령률(수식만 정의) = 단이률(위험률코드)*연령전환계수(위험률코드)   
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ3MjcyMDMxMCwtMTg4MzM0OTIzNiw5Nz
+eyJoaXN0b3J5IjpbMTI2NjQ4ODQ4OCwtMTg4MzM0OTIzNiw5Nz
 c3Mjk0MjAsNjA5NDI4MzQ3XX0=
 -->
