MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -58,7 +58,10 @@
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
  * 복합위험률 관리 주체
     - 연령률(수식만 정의) = 단이률(위험률코드)*연령전환계수(위험률코드)   
+    - 암수술1회 발생률 >> 큰문제 없었음
+    - 운전 중 급부위험률 = 교통상해사망(운전자구분자 값으로 제약) - 교통상해사망(비운저구분자값으로 제약)
+    - 부상치료비(1~7급) = MR000
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI2NjQ4ODQ4OCwtMTg4MzM0OTIzNiw5Nz
+eyJoaXN0b3J5IjpbMTE0MTUxMTAxMiwtMTg4MzM0OTIzNiw5Nz
 c3Mjk0MjAsNjA5NDI4MzQ3XX0=
 -->
