--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -62,7 +62,9 @@
     - 운전 중 급부위험률 = 교통상해사망(운전자구분자 값으로 제약) - 교통상해사망(비운전자구분자값으로 제약)
     - 부상치료비(1~7급) = (MR000549 + ... + MR000555) * MR002214
     - 위의 2개는 위험률단에서 코드를 새로 따서 관리를 해야하는건지 아니면 상품파트의 담보단에서 계산 시 관리를 해야하는건지?
+    - 상품파트 의견) 운전 중 급부위험률은 채번이 필요(담보단위-채번) / 납면에만 사용-채번 불필요
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI3MTIxNjA0OCwxNTI2MjgyODYyLC0xOD
-gzMzQ5MjM2LDk3NzcyOTQyMCw2MDk0MjgzNDddfQ==
+eyJoaXN0b3J5IjpbLTc3MDE1NjY1MywtMjcxMjE2MDQ4LDE1Mj
+YyODI4NjIsLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOTQyODM0
+N119
 -->
