--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -54,7 +54,7 @@
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
  * s비율 산출 시 비용손해인 경우 0이어야 함
     - MR002225 차량가액보장  / 출시이후 경과기간 / 자기부담금비율 / 경과기간 [1-3] 
-      ::  연령률에서도  비용손해인지 아닌지 엔진에서 처리해주어야 함
+      :: 연령률에서도  비용손해인지 아닌지 엔진에서 처리해주어야 함
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
  * 복합위험률 관리 주체
     - 연령률(수식만 정의) = 단일률(위험률코드)*연령전환계수(위험률코드)   
@@ -62,9 +62,10 @@
     - 운전 중 급부위험률 = 교통상해사망(운전자구분자 값으로 제약) - 교통상해사망(비운전자구분자값으로 제약)
     - 부상치료비(1~7급) = (MR000549 + ... + MR000555) * MR002214
     - 위의 2개는 위험률단에서 코드를 새로 따서 관리를 해야하는건지 아니면 상품파트의 담보단에서 계산 시 관리를 해야하는건지?
-    - 상품파트 의견) 운전 중 급부위험률은 채번이 필요(담보단위-채번) / 납면에만 사용-채번 불필요
+    - (상품파트 의견) 운전 중 급부위험률은 채번이 필요(담보단위-채번) / 납면에만 사용-채번 불필요 
+      :: 담보단 복합위험률에서 덧셈은 M기수로 표현 가능
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc3MDE1NjY1MywtMjcxMjE2MDQ4LDE1Mj
+eyJoaXN0b3J5IjpbMTczNzY3MTY2NiwtMjcxMjE2MDQ4LDE1Mj
 YyODI4NjIsLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOTQyODM0
 N119
 -->
