--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -41,22 +41,22 @@
         
    - 관리와 관리화면이 동반되어야 한다
   
- * 상해급수 구분자에 1 / 2 / 3 / 단일률 이 구분 >> 단일률을 분리해서 별도의 위험률코드를 가져가자
- * 차량용도 비운전자 위험률 >> 위험률 통합해서 가져가자 
- * 치아 관련 영구치 - 유치 합산(담보단의 만기가 연령률 가지고 있는 경우보다 큰 경우)
+ 1. 상해급수 구분자에 1 / 2 / 3 / 단일률 이 구분 >> 단일률을 분리해서 별도의 위험률코드를 가져가자
+ 2. 차량용도 비운전자 위험률 >> 위험률 통합해서 가져가자 
+ 3. 치아 관련 영구치 - 유치 합산(담보단의 만기가 연령률 가지고 있는 경우보다 큰 경우)
     - 연령범위 확장 0으로 채워서 가자
     - 위험률 값을 임의로 0을 채워서 가는건 바람직한 방향은 아니다 
- *  납입면제 급부에 사용하는 위험률을 중 연령이 없는 경우 어떻게 처리??
+ 4.  납입면제 급부에 사용하는 위험률을 중 연령이 없는 경우 어떻게 처리??
     - 단일탈퇴에서는 오류 다중탈퇴인 경우 연령이 없는 경우 0으로 적용할 수 있도록 하는 것이 어떤지?
      ex) 말기폐질환 15세~  일반암 0세~
- * 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
+ 5. 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
     - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
- * s비율 산출 시 비용손해인 경우 0이어야 함
+ 6. s비율 산출 시 비용손해인 경우 0이어야 함
     - MR002225 차량가액보장  / 출시이후 경과기간 / 자기부담금비율 / 경과기간 [1-3] 
       :: 연령률에서도  비용손해인지 아닌지 엔진에서 처리해주어야 함
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
- * 복합위험률 관리 주체
+ 7. 복합위험률 관리 주체
     - 연령률(수식만 정의) = 단일률(위험률코드)*연령전환계수(위험률코드)   
     - 암수술1회 발생률 >> 큰문제 없었음
     - 운전 중 급부위험률 = 교통상해사망(운전자구분자 값으로 제약) - 교통상해사망(비운전자구분자값으로 제약)
@@ -64,8 +64,10 @@
     - 위의 2개는 위험률단에서 코드를 새로 따서 관리를 해야하는건지 아니면 상품파트의 담보단에서 계산 시 관리를 해야하는건지?
     - (상품파트 의견) 운전 중 급부위험률은 채번이 필요(담보단위-채번) / 납면에만 사용-채번 불필요 
       :: 담보단 복합위험률에서 덧셈은 M기수로 표현 가능
+  8. 위험률 관계 정의 주체
+  9. 판매 중인 위험률  
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTczNzY3MTY2NiwtMjcxMjE2MDQ4LDE1Mj
-YyODI4NjIsLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOTQyODM0
-N119
+eyJoaXN0b3J5IjpbLTEyMzY0MTM5OTcsLTI3MTIxNjA0OCwxNT
+I2MjgyODYyLC0xODgzMzQ5MjM2LDk3NzcyOTQyMCw2MDk0Mjgz
+NDddfQ==
 -->
