--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -38,10 +38,12 @@
 * 기존 논의만 하다가 남은 이슈
    - ex) 특정성별만 관리하고 있는 위험률 
         > 구분코드 성별을 넣어서 관리하자
-        
+                
    - 관리와 관리화면이 동반되어야 한다
   
- 1. 상해급수 구분자에 1 / 2 / 3 / 단일률 이 구분 >> 단일률을 분리해서 별도의 위험률코드를 가져가자
+ 1. 상해급수 구분자에 1 / 2 / 3 / 단일률 이 구분 
+   > 단일률을 분리해서 별도의 위험률코드를 가져가자
+   
  2. 차량용도 비운전자 위험률 >> 위험률 통합해서 가져가자 
  3. 치아 관련 영구치 - 유치 합산(담보단의 만기가 연령률 가지고 있는 경우보다 큰 경우)
     - 연령범위 확장 0으로 채워서 가자
@@ -65,9 +67,9 @@
     - (상품파트 의견) 운전 중 급부위험률은 채번이 필요(담보단위-채번) / 납면에만 사용-채번 불필요 
       :: 담보단 복합위험률에서 덧셈은 M기수로 표현 가능
   8. 위험률 관계 정의 주체
-  9. 판매 중인 위험률  
+  9. 판매 중인 위험률 필터링을 할때 판매 중인 위험률이 정의? 관리 방안은 무엇인지? 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMzY0MTM5OTcsLTI3MTIxNjA0OCwxNT
-I2MjgyODYyLC0xODgzMzQ5MjM2LDk3NzcyOTQyMCw2MDk0Mjgz
-NDddfQ==
+eyJoaXN0b3J5IjpbMTY0MzgxMDkzNCwtMjcxMjE2MDQ4LDE1Mj
+YyODI4NjIsLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOTQyODM0
+N119
 -->
