--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -68,9 +68,10 @@
       :: 담보단 복합위험률에서 덧셈은 M기수로 표현 가능
   8. 위험률 관계 정의 주체
   9. 판매 중인 위험률 필터링을 할때 판매 중인 위험률이 정의? 관리 방안은 무엇인지? 
-     >  가장 최근 개정에서 
+     >  가장 최근 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
+     > 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzI5NTA2NDgsLTI3MTIxNjA0OCwxNTI2Mj
-gyODYyLC0xODgzMzQ5MjM2LDk3NzcyOTQyMCw2MDk0MjgzNDdd
-fQ==
+eyJoaXN0b3J5IjpbLTIyNDg4NTA4MywtMjcxMjE2MDQ4LDE1Mj
+YyODI4NjIsLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOTQyODM0
+N119
 -->
