--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -44,7 +44,9 @@
  1. 상해급수 구분자에 1 / 2 / 3 / 단일률 이 구분 
      > 단일률을 분리해서 별도의 위험률코드를 가져가자
    
- 2. 차량용도 비운전자 위험률 >> 위험률 통합해서 가져가자 
+ 2. 차량용도 비운전자 위험률 
+     > 위험률 통합해서 가져가자 
+   
  3. 치아 관련 영구치 - 유치 합산(담보단의 만기가 연령률 가지고 있는 경우보다 큰 경우)
     - 연령범위 확장 0으로 채워서 가자
     - 위험률 값을 임의로 0을 채워서 가는건 바람직한 방향은 아니다 
@@ -67,11 +69,12 @@
     - (상품파트 의견) 운전 중 급부위험률은 채번이 필요(담보단위-채번) / 납면에만 사용-채번 불필요 
       :: 담보단 복합위험률에서 덧셈은 M기수로 표현 가능
   8. 위험률 관계 정의 주체
-  9. 판매 중인 위험률 필터링을 할때 판매 중인 위험률이 정의? 관리 방안은 무엇인지? 
-     >  가장 최근 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
      > 
+  9. 판매 중인 위험률 필터링을 할때 판매 중인 위험률이 정의? 관리 방안은 무엇인지? 
+     >  최종 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
+     > 별도로 관리 할 정보는 아닌 것으로 판단
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIyNDg4NTA4MywtMjcxMjE2MDQ4LDE1Mj
-YyODI4NjIsLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOTQyODM0
-N119
+eyJoaXN0b3J5IjpbOTA3MTQxOTUsLTI3MTIxNjA0OCwxNTI2Mj
+gyODYyLC0xODgzMzQ5MjM2LDk3NzcyOTQyMCw2MDk0MjgzNDdd
+fQ==
 -->
