--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -50,9 +50,11 @@
  3. 치아 관련 영구치 - 유치 합산(담보단의 만기가 연령률 가지고 있는 경우보다 큰 경우)
     - 연령범위 확장 0으로 채워서 가자
     - 위험률 값을 임의로 0을 채워서 가는건 바람직한 방향은 아니다 
- 4.  납입면제 급부에 사용하는 위험률을 중 연령이 없는 경우 어떻게 처리??
+    - 납입면제 급부에 사용하는 위험률을 중 연령이 없는 경우 어떻게 처리??
     - 단일탈퇴에서는 오류 다중탈퇴인 경우 연령이 없는 경우 0으로 적용할 수 있도록 하는 것이 어떤지?
      ex) 말기폐질환 15세~  일반암 0세~
+     > 임의로 0으로 채우면 안된다.  그럼 어떻게 구분? boundary를 넘어가는 경우 
+     
  5. 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
     - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
@@ -70,11 +72,12 @@
       :: 담보단 복합위험률에서 덧셈은 M기수로 표현 가능
   8. 위험률 관계 정의 주체
      > 
+  
   9. 판매 중인 위험률 필터링을 할때 판매 중인 위험률이 정의? 관리 방안은 무엇인지? 
      >  최종 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
      > 별도로 관리 할 정보는 아닌 것으로 판단
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTA3MTQxOTUsLTI3MTIxNjA0OCwxNTI2Mj
-gyODYyLC0xODgzMzQ5MjM2LDk3NzcyOTQyMCw2MDk0MjgzNDdd
-fQ==
+eyJoaXN0b3J5IjpbLTE1NjIxMzU0NDUsLTI3MTIxNjA0OCwxNT
+I2MjgyODYyLC0xODgzMzQ5MjM2LDk3NzcyOTQyMCw2MDk0Mjgz
+NDddfQ==
 -->
