MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -53,7 +53,7 @@
     - 납입면제 급부에 사용하는 위험률을 중 연령이 없는 경우 어떻게 처리??
     - 단일탈퇴에서는 오류 다중탈퇴인 경우 연령이 없는 경우 0으로 적용할 수 있도록 하는 것이 어떤지?
      ex) 말기폐질환 15세~  일반암 0세~
-     > 임의로 0으로 채우면 안된다.  그럼 어떻게 구분? boundary를 넘어가는 경우 
+     > 임의로 0으로 채우면 안된다.  그럼 어떻게 구분? boundary를 넘어가는 경우 다 0 으로 처리
      
  5. 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
     - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
@@ -77,7 +77,7 @@
      >  최종 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
      > 별도로 관리 할 정보는 아닌 것으로 판단
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NjIxMzU0NDUsLTI3MTIxNjA0OCwxNT
-I2MjgyODYyLC0xODgzMzQ5MjM2LDk3NzcyOTQyMCw2MDk0Mjgz
-NDddfQ==
+eyJoaXN0b3J5IjpbMTI4MTIwNTI5MywtMjcxMjE2MDQ4LDE1Mj
+YyODI4NjIsLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOTQyODM0
+N119
 -->
