--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -54,7 +54,7 @@
     - 단일탈퇴에서는 오류 다중탈퇴인 경우 연령이 없는 경우 0으로 적용할 수 있도록 하는 것이 어떤지?
      ex) 말기폐질환 15세~  일반암 0세~
      > 임의로 0으로 채우면 안된다. 
-     > 엔진에서 처리해주어야 한다. 그럼 어
+     > 엔진에서 처리해주어야 한다.  위험률단에의 속성인지 구분자의 속성인지 담보단에 연결할 때 속성인지? 담보단에서 처리해야 함
      
  4. 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
     - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
@@ -79,7 +79,7 @@
      >  최종 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
      > 별도로 관리 할 정보는 아닌 것으로 판단
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ3NjY3NjMwNiwtMjcxMjE2MDQ4LDE1Mj
+eyJoaXN0b3J5IjpbLTMzMTUzNjA4MywtMjcxMjE2MDQ4LDE1Mj
 YyODI4NjIsLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOTQyODM0
 N119
 -->
