MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -59,11 +59,13 @@
  4. 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
     - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
-    
+     > 
+         
  5. s비율 산출 시 비용손해인 경우 0이어야 함
     - MR002225 차량가액보장  / 출시이후 경과기간 / 자기부담금비율 / 경과기간 [1-3] 
       :: 연령률에서도  비용손해인지 아닌지 엔진에서 처리해주어야 함
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
+    
  6. 복합위험률 관리 주체
     - 연령률(수식만 정의) = 단일률(위험률코드)*연령전환계수(위험률코드)   
     - 암수술1회 발생률 >> 큰문제 없었음
@@ -79,7 +81,7 @@
      >  최종 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
      > 별도로 관리 할 정보는 아닌 것으로 판단
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcwNDQ0ODgxMCwtMjcxMjE2MDQ4LDE1Mj
-YyODI4NjIsLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOTQyODM0
-N119
+eyJoaXN0b3J5IjpbLTE3NTM0OTYzMDQsLTcwNDQ0ODgxMCwtMj
+cxMjE2MDQ4LDE1MjYyODI4NjIsLTE4ODMzNDkyMzYsOTc3NzI5
+NDIwLDYwOTQyODM0N119
 -->
