--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -59,7 +59,7 @@
  4. 특별조건부 대상 위험률 식별을 어떻게 가져갈지?
     - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
-    - 제가급여위험률(장기요양위험률 * 제가이용위험률) >> 상해, 질병으로 분류할수 없음
+    - 제가급여위험률(장기요양위험률 * 재가이용률) >> 상해, 질병으로 분류할수 없음
      > 
          
  5. s비율 산출 시 비용손해인 경우 0이어야 함
@@ -82,7 +82,7 @@
      >  최종 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
      > 별도로 관리 할 정보는 아닌 것으로 판단
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTc5NzQwMjk4LC0xNzUzNDk2MzA0LC03MD
+eyJoaXN0b3J5IjpbNDExMDM1NjIyLC0xNzUzNDk2MzA0LC03MD
 Q0NDg4MTAsLTI3MTIxNjA0OCwxNTI2MjgyODYyLC0xODgzMzQ5
 MjM2LDk3NzcyOTQyMCw2MDk0MjgzNDddfQ==
 -->
