MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -60,12 +60,13 @@
     - 보험개발원 numbering으로(1,2,6..) 위험률 분류해서 가져가고 있음 
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
     - 제가급여위험률(장기요양위험률 * 재가이용률) >> 상해, 질병으로 분류할수 없음
-     > 
+     > 고민이 필요
          
  5. s비율 산출 시 비용손해인 경우 0이어야 함
     - MR002225 차량가액보장  / 출시이후 경과기간 / 자기부담금비율 / 경과기간 [1-3] 
       :: 연령률에서도  비용손해인지 아닌지 엔진에서 처리해주어야 함
     - 위험률 채번할 때 관리해야 하는 정보가 아닌지?
+     > 고민이 필요
     
  6. 복합위험률 관리 주체
     - 연령률(수식만 정의) = 단일률(위험률코드)*연령전환계수(위험률코드)   
@@ -75,6 +76,8 @@
     - 위의 2개는 위험률단에서 코드를 새로 따서 관리를 해야하는건지 아니면 상품파트의 담보단에서 계산 시 관리를 해야하는건지?
     - (상품파트 의견) 운전 중 급부위험률은 채번이 필요(담보단위-채번) / 납면에만 사용-채번 불필요 
       :: 담보단 복합위험률에서 덧셈은 M기수로 표현 가능
+     > 고민이 필요
+
   7. 위험률 관계 정의 주체
      > 
   
@@ -82,7 +85,7 @@
      >  최종 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
      > 별도로 관리 할 정보는 아닌 것으로 판단
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDExMDM1NjIyLC0xNzUzNDk2MzA0LC03MD
-Q0NDg4MTAsLTI3MTIxNjA0OCwxNTI2MjgyODYyLC0xODgzMzQ5
-MjM2LDk3NzcyOTQyMCw2MDk0MjgzNDddfQ==
+eyJoaXN0b3J5IjpbOTI0NTE3MzgyLDQxMTAzNTYyMiwtMTc1Mz
+Q5NjMwNCwtNzA0NDQ4ODEwLC0yNzEyMTYwNDgsMTUyNjI4Mjg2
+MiwtMTg4MzM0OTIzNiw5Nzc3Mjk0MjAsNjA5NDI4MzQ3XX0=
 -->
