MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -79,13 +79,14 @@
      > 고민이 필요
 
   7. 위험률 관계 정의 주체
-     > 
+     - 위험률 담당자가 혼자서 관리할 수 있는건지?
+     > 고민이 필요
   
-  9. 판매 중인 위험률 필터링을 할때 판매 중인 위험률이 정의? 관리 방안은 무엇인지? 
+  8. 판매 중인 위험률 필터링을 할때 판매 중인 위험률이 정의? 관리 방안은 무엇인지? 
      >  최종 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
      > 별도로 관리 할 정보는 아닌 것으로 판단
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTI0NTE3MzgyLDQxMTAzNTYyMiwtMTc1Mz
-Q5NjMwNCwtNzA0NDQ4ODEwLC0yNzEyMTYwNDgsMTUyNjI4Mjg2
-MiwtMTg4MzM0OTIzNiw5Nzc3Mjk0MjAsNjA5NDI4MzQ3XX0=
+eyJoaXN0b3J5IjpbLTg2NzM4NzU1OCw0MTEwMzU2MjIsLTE3NT
+M0OTYzMDQsLTcwNDQ0ODgxMCwtMjcxMjE2MDQ4LDE1MjYyODI4
+NjIsLTE4ODMzNDkyMzYsOTc3NzI5NDIwLDYwOTQyODM0N119
 -->
