--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -33,7 +33,12 @@
     -  선행해야하는 작업 list 작업 진행 해야함
     - 위험률 맵핑은 이 list중 최우선 단계일뿐.. 
     - 위험률 맵핑 뿐 아니라 모델링 자동화에 필요한 선행작업  list화 
-    * 상품실 주간업무 : 특별한 이슈는 없었고  옳
+    * 상품실 주간업무 
+     - 특별한 이슈는 없었고  올해는 모델링 자동화를 목표로 하고 내년에는 인수시스템을 갈아 엎자.
+     - 내년에 해야 할 planning을 다시 세워보자
+     - rule형태와 데싸의 머신러닝을 다시 한번 검토해보자
+     - rule을 처리할
+      
  ### 위험률 관련 회의
 * 기존 논의만 하다가 남은 이슈
    - ex) 특정성별만 관리하고 있는 위험률 
@@ -86,8 +91,8 @@
      > 최종 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
      > 별도로 관리 할 정보는 아닌 것으로 판단
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI2Mzk2Nzc0NiwtMzIyMjUyMTg0LDQxMT
-AzNTYyMiwtMTc1MzQ5NjMwNCwtNzA0NDQ4ODEwLC0yNzEyMTYw
-NDgsMTUyNjI4Mjg2MiwtMTg4MzM0OTIzNiw5Nzc3Mjk0MjAsNj
-A5NDI4MzQ3XX0=
+eyJoaXN0b3J5IjpbLTExODcyMDY5NTksLTMyMjI1MjE4NCw0MT
+EwMzU2MjIsLTE3NTM0OTYzMDQsLTcwNDQ0ODgxMCwtMjcxMjE2
+MDQ4LDE1MjYyODI4NjIsLTE4ODMzNDkyMzYsOTc3NzI5NDIwLD
+YwOTQyODM0N119
 -->
