MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -90,9 +90,17 @@
   8. 판매 중인 위험률 필터링을 할때 판매 중인 위험률이 정의? 관리 방안은 무엇인지? 
      > 최종 개정(판매적용일자)에서 연결이 되어 있는 위험률만 표현
      > 별도로 관리 할 정보는 아닌 것으로 판단
+
+## 22일 목요일
+
+* 정의철님
+   - 
+
+* 김소진님
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI2ODg5MzE0LC0zMjIyNTIxODQsNDExMD
-M1NjIyLC0xNzUzNDk2MzA0LC03MDQ0NDg4MTAsLTI3MTIxNjA0
-OCwxNTI2MjgyODYyLC0xODgzMzQ5MjM2LDk3NzcyOTQyMCw2MD
-k0MjgzNDddfQ==
+eyJoaXN0b3J5IjpbMTM0ODQxNTMzOSwxMjY4ODkzMTQsLTMyMj
+I1MjE4NCw0MTEwMzU2MjIsLTE3NTM0OTYzMDQsLTcwNDQ0ODgx
+MCwtMjcxMjE2MDQ4LDE1MjYyODI4NjIsLTE4ODMzNDkyMzYsOT
+c3NzI5NDIwLDYwOTQyODM0N119
 -->
