MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -94,12 +94,14 @@
 ## 22일 목요일
 
 * 정의철님
-   - 
+   - 산출단위와 무해지 반영해서 올려놓은 상태
+   - 도커이미지 만들어서 올리려고 하는 상태
+   - 도커이미지 rep 
 
 * 김소진님
-
+   - 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM0ODQxNTMzOSwxMjY4ODkzMTQsLTMyMj
+eyJoaXN0b3J5IjpbMTk1MzAwNTM5NSwxMjY4ODkzMTQsLTMyMj
 I1MjE4NCw0MTEwMzU2MjIsLTE3NTM0OTYzMDQsLTcwNDQ0ODgx
 MCwtMjcxMjE2MDQ4LDE1MjYyODI4NjIsLTE4ODMzNDkyMzYsOT
 c3NzI5NDIwLDYwOTQyODM0N119
