MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -95,14 +95,15 @@
 
 * 정의철님
    - 산출단위와 무해지 반영해서 올려놓은 상태
+   - 일부건에 대하여 대사해서 검증은 완료한 상태
    - 도커이미지 만들어서 올리려고 하는 상태
-   - 도커이미지 rep 
+   - 도커이미지 repository 만들어서 올려놓아야 함 
 
 * 김소진님
-   - 
+   -  
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk1MzAwNTM5NSwxMjY4ODkzMTQsLTMyMj
-I1MjE4NCw0MTEwMzU2MjIsLTE3NTM0OTYzMDQsLTcwNDQ0ODgx
-MCwtMjcxMjE2MDQ4LDE1MjYyODI4NjIsLTE4ODMzNDkyMzYsOT
-c3NzI5NDIwLDYwOTQyODM0N119
+eyJoaXN0b3J5IjpbLTE1MzI5NDk3MzgsMTI2ODg5MzE0LC0zMj
+IyNTIxODQsNDExMDM1NjIyLC0xNzUzNDk2MzA0LC03MDQ0NDg4
+MTAsLTI3MTIxNjA0OCwxNTI2MjgyODYyLC0xODgzMzQ5MjM2LD
+k3NzcyOTQyMCw2MDk0MjgzNDddfQ==
 -->
