MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -98,11 +98,12 @@
    - 일부건에 대하여 대사해서 검증은 완료한 상태
    - 도커이미지 만들어서 올리려고 하는 상태
    - 도커이미지 repository 만들어서 올려놓아야 함 
-
 * 김소진님
-   -  
+   - 산출단위 반영 후 해약환급금 예시표 재검증 진행 중
+ * 고용석님
+    - layout생성할 때 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MzI5NDk3MzgsMTI2ODg5MzE0LC0zMj
+eyJoaXN0b3J5IjpbLTEzNjIzODkzNDksMTI2ODg5MzE0LC0zMj
 IyNTIxODQsNDExMDM1NjIyLC0xNzUzNDk2MzA0LC03MDQ0NDg4
 MTAsLTI3MTIxNjA0OCwxNTI2MjgyODYyLC0xODgzMzQ5MjM2LD
 k3NzcyOTQyMCw2MDk0MjgzNDddfQ==
