MRZ/SOL/업무일지/2021.4월/4주차.md updated from https://stackedit.io/

--- a/MRZ/SOL/업무일지/2021.4월/4주차.md
+++ b/MRZ/SOL/업무일지/2021.4월/4주차.md
@@ -101,11 +101,12 @@
 * 김소진님
    - 산출단위 반영 후 해약환급금 예시표 재검증 진행 중
  * 고용석님
-    - layout 생성할 때 테스트 case추가생성 진행 중
+    - pv key 생성하는 로직 부분 테스트 case추가생성 진행 중
     - pv key 생성하는 로직 부분 오류  수정하여 재산출 진행
+    - 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2OTkzMjE5ODIsMTI2ODg5MzE0LC0zMj
-IyNTIxODQsNDExMDM1NjIyLC0xNzUzNDk2MzA0LC03MDQ0NDg4
-MTAsLTI3MTIxNjA0OCwxNTI2MjgyODYyLC0xODgzMzQ5MjM2LD
-k3NzcyOTQyMCw2MDk0MjgzNDddfQ==
+eyJoaXN0b3J5IjpbMTE4MjU1MjQ5MSwxMjY4ODkzMTQsLTMyMj
+I1MjE4NCw0MTEwMzU2MjIsLTE3NTM0OTYzMDQsLTcwNDQ0ODgx
+MCwtMjcxMjE2MDQ4LDE1MjYyODI4NjIsLTE4ODMzNDkyMzYsOT
+c3NzI5NDIwLDYwOTQyODM0N119
 -->
